Bug 400623 - While editing clipboard items, one cannot use alt accelerator to select 'OK' button
Summary: While editing clipboard items, one cannot use alt accelerator to select 'OK' ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 5.15.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-03 14:54 UTC by Kishore Gopalakrishnan
Modified: 2021-10-06 14:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2018-11-03 14:54:34 UTC
SUMMARY


STEPS TO REPRODUCE
1. Copy some text to the clipboard.
2. Open the clipboard widget and press the button to edit the text.
3. A window appears with the copy text editable. It has two buttons, OK and 'Cancel'.
4. Press 'alt'. Observe that 'O' in 'OK' and 'C' in cancel are underlined.
5. Press 'alt+O'.
6. Press 'alt+C'.

OBSERVED RESULT
When we press 'alt+O', the letter 'o' is just input into the text field. However, pressing 'alt+C' activates the 'cancel' button and closes the edit window.

EXPECTED RESULT
'alt+O' should activate the 'OK' button.

SOFTWARE VERSIONS
KDE Plasma Version: 5.14.2
KDE Frameworks Version: 5.51.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION
The value of the 'AutoCheckAccelerators' setting in .config/kdeglobals doesn't affect the reproducibility of this bug.
Comment 1 Christoph Feck 2018-11-27 01:55:07 UTC
The "OK" button is assigned a new shortcut Ctrl+Return, probably to avoid that hitting Return exits the dialog, instead of entering a new line. That seems to prevent the automatic assignment of the Alt+O shortcut.

What's interesting is that the Breeze theme still thinks that Alt+O would work (otherwise it wouldn't underline the "O").

https://cgit.kde.org/plasma-workspace.git/tree/klipper/klipper.cpp#n857
Comment 2 Bug Janitor Service 2021-10-06 12:36:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1095
Comment 3 Bharadwaj Raju 2021-10-06 14:51:27 UTC
Git commit ff5c9a1129bceeae4afcf2dc2d05632ca8c43678 by Bharadwaj Raju.
Committed on 06/10/2021 at 12:44.
Pushed by ngraham into branch 'master'.

[klipper] Fix shortcut of OK button in the clipboard content edit dialog

M  +21   -2    klipper/klipper.cpp
M  +11   -0    klipper/klipper.h

https://invent.kde.org/plasma/plasma-workspace/commit/ff5c9a1129bceeae4afcf2dc2d05632ca8c43678
Comment 4 Nate Graham 2021-10-06 14:53:38 UTC
Git commit d38145e1f9840ae62877bbc43d27a97bdec67d0c by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 06/10/2021 at 14:53.
Pushed by ngraham into branch 'Plasma/5.23'.

[klipper] Fix shortcut of OK button in the clipboard content edit dialog


(cherry picked from commit ff5c9a1129bceeae4afcf2dc2d05632ca8c43678)

M  +21   -2    klipper/klipper.cpp
M  +11   -0    klipper/klipper.h

https://invent.kde.org/plasma/plasma-workspace/commit/d38145e1f9840ae62877bbc43d27a97bdec67d0c