[klipper] Fix shortcut of OK button in the clipboard content edit dialog

BUG: 400623


(cherry picked from commit ff5c9a1129bceeae4afcf2dc2d05632ca8c43678)